<resources>
 <!--   <string name="google_maps_API_key">AIzaSyA3pflqVlY4aBEYrKbV_eO8ASCs4kmMLY4</string>-->
    <string name="app_name">Qibla</string>
    <string name="map_name">Google Map</string>
    <string name="compass_name">Qibla Locator</string>
    <string name="btn_map">My Location</string>
    <string name="btn_compass">Qibla Locator</string>
    <string name="btn_home">Home</string>
    <string name="btn_save">Save</string>
    <string name="search_image">Search Image</string>
    <string name="search_hint">Enter address, City or Zip Code</string>
    <string name="green_image">Aligned Qibla image</string>
    <string name="rotating_image">Rotating image</string>
    <string name="txt_azimuth">"latitude:  00.0000 "</string>
    <string name="txt_azimuthlon">longitude:  00.0000</string>

    <string name="txt_serviceok">Google Service is OK</string>
    <string name="txt_servicenotok">Google Service is not OK</string>
    <string name="txt_bearing">0    °  NE</string>
    <string name="txt_savedtextlat">000.0000</string>
    <string name="txt_savedtextlon">000.0000</string>
     <string name="txt_savedtextbear">000.0000 </string>
    <string name="txt_savedtextNE">NE </string>

    <string name="txt_explain">Rotate the phone to Qibla direction. Stop rotating when screen turns green. Keep the phone away from electonic and magnetic sources.</string>
    <string name="txt_phone">PHONE</string>
    <string name="txt_qibla">QIBLA</string>
    <string name="txtlat">"Saved Latitude"</string>
    <string name="textlon">"Saved Longiitude"</string>
    <string name="textbear">"Saved Qibla direction"</string>
   <string name="textNE">"Saved Qibla side"</string>
   <string name="stringNE">" °  NE"</string>
   <string name="stringNW">" °  NW"</string>




</resources>
