<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haris.mapsgooglegoogleplaces.MainActivity">

<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_map"
        android:id="@+id/btnMap"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#028900"
        android:textStyle="bold"
        android:text="@string/txt_serviceok"
        android:id= "@+id/txt_serviceok"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:text="@string/txt_servicenotok"
        android:id= "@+id/txt_servicenotok"/>

    <CheckBox
        android:id="@+id/playAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMap"
        android:text="Play Ezzan"
        android:onClick="playAudio"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="66dp" />


</RelativeLayout>

